# MailHits

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: http.rs  main.rs  models.rs  smtp.rs
static/css/: style.css
static/html/: index.html
static/js/: app.js
