[package]
name = "mailhits"
version = "1.0.0-beta.1"
edition = "2024"
authors = ["fullwidth-hyphen"]
description = "A mail testing application"

[dependencies]
# SMTP server
mail-parser = "0.11"    # Email parsing

# Web server and API
axum = { version = "0.8", features = ["ws"] }  # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }  # HTTP middleware
tower = "0.5"  # Service abstraction
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"    # JSON support

# Static file embedding
rust-embed = "8.2"  # Embed static files in binary
mime_guess = "2.0"  # MIME type detection

# WebSocket support
futures-util = "0.3"  # For WebSocket handling

# Utilities
chrono = { version = "0.4", features = ["serde"] }  # Date/time handling
uuid = { version = "1.3", features = ["v4", "serde"] }  # Unique IDs
tracing = "0.1"       # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Logging setup
clap = { version = "4.5", features = ["derive"] }  # Command-line argument parsing

